--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -1,6 +1,6 @@
 #粵語國語字總合書寫建議體，集合粵語廣州音欽州音台山音南寧音同通用粵語音
 #大粵國音實錄 Đại Oạt Quóc Yâm Sật Lục
-#使用指南：一個讀音可以同時存在多種正寫方式，譬如話uy 同 uy/vy,呢兩種正寫喺手寫情況底下同粵語國語字發音系統入面並無分別。
+#使用指南：一個讀音可以同時存在多種正寫方式，譬如話uy 同 uy,呢兩種正寫喺手寫情況底下同粵語國語字發音系統入面並無分別。
 #ay同ê正寫嘅韻腹發音相同，呢兩種正寫嘅分別在於，漢字嘅詞源係漢越詞或者有明確音變規律嘅純越詞語用ê，其餘嘅非漢字詞、唔符合一般音韻變化規律嘅發音，同埋用嚟表音嘅表示韻腹發音而冇漢字意思嘅音節依然使用ay正寫
 #韻首字母k喺韻腹字母a u o â ă ư ô ơ前邊可以用字母c替代
 #version: 3/6/2025
@@ -29,9 +29,9 @@
 （廣州音）	响	hưởng
 （廣州音）	响	hảy
 （廣州音）	威	vai
-（廣州音）	威	uy/vy
-（台山音）	威	úy/vý
-（欽州音）	威	uy/vy
+（廣州音）	威	uy
+（台山音）	威	úy
+（欽州音）	威	uy
 （南寧音）	威	uy
 （廣州音）	吖	a
 （廣州音）	吖	ơ
@@ -16796,10 +16796,10 @@
 （廣州音）	凷	phái
 （廣州音）	勓	phái
 （廣州音）	喟	phái
-（廣州音）	喟	úy/vý
+（廣州音）	喟	úy
 （廣州音）	喟	ụy/vỵ
 （廣州音）	喟	ủy
-（台山音）	喟	ủy/vỷ
+（台山音）	喟	ủy
 （欽州音）	喟	vè
 （欽州音）	喟	ủy
 （南寧音）	喟	ụy
@@ -17220,7 +17220,7 @@
 （廣州音）	瀈	phay
 （廣州音）	灳	phay
 （廣州音）	煇	phay
-（廣州音）	煇	uy/vy
+（廣州音）	煇	uy
 （廣州音）	煇	vận
 （台山音）	煇	phún
 （台山音）	煇	phí
@@ -19447,13 +19447,13 @@
 （廣州音）	䫥	phủi
 （廣州音）	洧	phủi
 （廣州音）	洧	ũy/vỹ
-（台山音）	洧	ủy/vỷ
+（台山音）	洧	ủy
 （南寧音）	洧	phổi
 （廣州音）	燘	mũi
 （廣州音）	燘	phủi
 （廣州音）	痏	phủi
 （廣州音）	痏	ũy/vỹ
-（台山音）	痏	ủy/vỷ
+（台山音）	痏	ủy
 （南寧音）	痏	phổi
 （廣州音）	賄	khủi
 （廣州音）	賄	phủi
@@ -19462,7 +19462,7 @@
 （南寧音）	賄	phổi
 （廣州音）	鮪	phủi
 （廣州音）	鮪	ũy/vỹ
-（台山音）	鮪	ủy/vỷ
+（台山音）	鮪	ủy
 （欽州音）	鮪	ủy
 （南寧音）	鮪	phổi
 （廣州音）	㑰	phúi
@@ -25363,7 +25363,7 @@
 （欽州音）	攰	kùi
 （南寧音）	攰	quị
 （廣州音）	癐	quị
-（廣州音）	癐	uy/vy
+（廣州音）	癐	uy
 （欽州音）	癐	kùi
 （南寧音）	癐	quị
 （南寧音）	癐	uy
@@ -30619,7 +30619,7 @@
 （廣州音）	磑	ngày
 （廣州音）	磑	ngòi
 （廣州音）	磑	ngọi
-（廣州音）	磑	úy/vý
+（廣州音）	磑	úy
 （南寧音）	磑	(白)hài
 （南寧音）	磑	(白)ngay
 （南寧音）	磑	ngòi
@@ -39203,11 +39203,11 @@
 （廣州音）	乚	oát
 （廣州音）	乚	yoạt
 （廣州音）	噦	oát
-（廣州音）	噦	úy/vý
+（廣州音）	噦	úy
 （廣州音）	噦	yoạt
-（台山音）	噦	úy/vý
+（台山音）	噦	úy
 （台山音）	噦	oạt
-（欽州音）	噦	úy/vý
+（欽州音）	噦	úy
 （欽州音）	噦	yiệt
 （欽州音）	噦	ọt
 （南寧音）	噦	oạt
@@ -40928,7 +40928,7 @@
 （南寧音）	膾	khúy
 （廣州音）	薈	khúi
 （廣州音）	薈	khủi
-（廣州音）	薈	úy/vý
+（廣州音）	薈	úy
 （廣州音）	薈	vúi
 （廣州音）	薈	vụi
 （台山音）	薈	vọi
@@ -41025,7 +41025,7 @@
 （欽州音）	活	vột
 （南寧音）	活	vột
 （廣州音）	濊	khót
-（廣州音）	濊	úy/vý
+（廣州音）	濊	úy
 （廣州音）	眓	khót
 （南寧音）	眓	phốt
 （廣州音）	筈	khót
@@ -41294,7 +41294,7 @@
 （廣州音）	隗	ngãy
 （廣州音）	隗	ũy/vỹ
 （台山音）	隗	khỳ
-（台山音）	隗	ủy/vỷ
+（台山音）	隗	ủy
 （欽州音）	隗	ngảy
 （南寧音）	隗	khùy
 （南寧音）	隗	ngãy
@@ -41494,7 +41494,7 @@
 （欽州音）	權	khiền
 （南寧音）	權	khoàn
 （廣州音）	腃	khoàn
-（廣州音）	腃	úy/vý
+（廣州音）	腃	úy
 （廣州音）	蜷	khoàn
 （台山音）	蜷	khùn
 （欽州音）	蜷	khiền
@@ -50682,7 +50682,7 @@
 （南寧音）	餒	nỗi
 （廣州音）	餧	nõi
 （廣州音）	餧	nũi
-（廣州音）	餧	úy/vý
+（廣州音）	餧	úy
 （南寧音）	餧	nỗi
 （南寧音）	餧	úy
 （廣州音）	鮾	nũi
@@ -62123,7 +62123,7 @@
 （欽州音）	摥	thóng
 （南寧音）	摥	thóng
 （廣州音）	熨	thóng
-（廣州音）	熨	úy/vý
+（廣州音）	熨	úy
 （廣州音）	熨	vât
 （廣州音）	熨	vận
 （台山音）	熨	hóng
@@ -62933,14 +62933,14 @@
 （廣州音）	譮	vạ
 （廣州音）	黊	vạ
 （廣州音）	㗏	vai
-（廣州音）	㗏	uy/vy
+（廣州音）	㗏	uy
 （廣州音）	㛻	vai
 （廣州音）	䴜	vai
 （廣州音）	崴	vai
-（廣州音）	崴	uy/vy
+（廣州音）	崴	uy
 （廣州音）	崴	vải
-（台山音）	崴	úy/vý
-（欽州音）	崴	uy/vy
+（台山音）	崴	úy
+（欽州音）	崴	uy
 （南寧音）	崴	uy
 （廣州音）	瀤	vai
 （廣州音）	瀤	vài
@@ -62983,7 +62983,7 @@
 （台山音）	壞	vại
 （欽州音）	壞	vài
 （南寧音）	壞	vại
-（廣州音）	恚	úy/vý
+（廣州音）	恚	úy
 （廣州音）	恚	vại
 （廣州音）	恚	ụy/vỵ
 （台山音）	恚	phị
@@ -63227,70 +63227,70 @@
 （廣州音）	螖	vạt
 （台山音）	螖	vạt
 （欽州音）	螖	vạt
-（廣州音）	㙎	uy/vy
-（廣州音）	㣦	uy/vy
-（廣州音）	㮃	uy/vy
-（廣州音）	䫋	uy/vy
-（廣州音）	䴧	uy/vy
-（廣州音）	倭	uy/vy
+（廣州音）	㙎	uy
+（廣州音）	㣦	uy
+（廣州音）	㮃	uy
+（廣州音）	䫋	uy
+（廣州音）	䴧	uy
+（廣州音）	倭	uy
 （廣州音）	倭	vo
 （廣州音）	倭	ủy
 （廣州音）	倭	vỏ
 （台山音）	倭	vó
-（台山音）	倭	ủy/vỷ
+（台山音）	倭	ủy
 （欽州音）	倭	vo
 （南寧音）	倭	uy
 （南寧音）	倭	vo
 （南寧音）	倭	vỏ
-（廣州音）	喴	uy/vy
+（廣州音）	喴	uy
 （廣州音）	喴	vi
-（欽州音）	喴	uy/vy
-（廣州音）	委	uy/vy
+（欽州音）	喴	uy
+（廣州音）	委	uy
 （廣州音）	委	ủy
-（台山音）	委	ủy/vỷ
-（欽州音）	委	uy/vy
+（台山音）	委	ủy
+（欽州音）	委	uy
 （欽州音）	委	ủy
 （南寧音）	委	uy
 （南寧音）	委	ủy
-（廣州音）	媙	uy/vy
-（欽州音）	媙	uy/vy
+（廣州音）	媙	uy
+（欽州音）	媙	uy
 （南寧音）	媙	uy
-（廣州音）	揻	uy/vy
-（廣州音）	楲	uy/vy
-（廣州音）	痿	uy/vy
+（廣州音）	揻	uy
+（廣州音）	楲	uy
+（廣州音）	痿	uy
 （廣州音）	痿	ủy
-（台山音）	痿	ủy/vỷ
+（台山音）	痿	ủy
 （欽州音）	痿	ủy
 （南寧音）	痿	ủy
-（廣州音）	縅	uy/vy
-（廣州音）	萎	uy/vy
-（廣州音）	萎	úy/vý
+（廣州音）	縅	uy
+（廣州音）	萎	uy
+（廣州音）	萎	úy
 （廣州音）	萎	ủy
-（台山音）	萎	ủy/vỷ
+（台山音）	萎	ủy
 （欽州音）	萎	ủy
 （南寧音）	萎	ủy
-（廣州音）	葳	uy/vy
-（台山音）	葳	ủy/vỷ
-（欽州音）	葳	uy/vy
+（廣州音）	葳	uy
+（台山音）	葳	ủy
+（欽州音）	葳	uy
 （南寧音）	葳	uy
-（廣州音）	蜲	uy/vy
+（廣州音）	蜲	uy
 （廣州音）	蜲	ủy
-（廣州音）	蝛	uy/vy
+（廣州音）	蝛	uy
 （南寧音）	蝛	uy
-（廣州音）	蟡	uy/vy
-（廣州音）	覣	uy/vy
+（廣州音）	蟡	uy
+（廣州音）	覣	uy
 （南寧音）	覣	uy
-（廣州音）	逶	uy/vy
+（廣州音）	逶	uy
 （廣州音）	逶	ủy
-（台山音）	逶	ủy/vỷ
-（欽州音）	逶	uy/vy
+（台山音）	逶	ủy
+（欽州音）	逶	uy
 （南寧音）	逶	uy
-（廣州音）	隇	uy/vy
-（廣州音）	鰃	uy/vy
+（廣州音）	隇	uy
+（廣州音）	鰃	uy
 （南寧音）	鰃	vôi
-（廣州音）	鰄	uy/vy
-（廣州音）	𨂿	uy/vy
-（廣州音）	𨩆	uy/vy
+（廣州音）	鰄	uy
+（廣州音）	𨂿	uy
+（廣州音）	𨩆	uy
 （廣州音）	㕟	ủy
 （廣州音）	㩓	ủy
 （廣州音）	㷐	ủy
@@ -63316,11 +63316,11 @@
 （欽州音）	唯	ùy
 （南寧音）	唯	ủy
 （南寧音）	唯	ùy
-（廣州音）	喂	úy/vý
+（廣州音）	喂	úy
 （廣州音）	喂	ụy/vỵ
 （廣州音）	喂	ủy
 （台山音）	喂	ụy/vỵ
-（欽州音）	喂	úy/vý
+（欽州音）	喂	úy
 （欽州音）	喂	ủy
 （南寧音）	喂	(語)ủy
 （南寧音）	喂	úy
@@ -63339,16 +63339,16 @@
 （廣州音）	猥	vui
 （廣州音）	猥	ủy
 （廣州音）	猥	vủi
-（台山音）	猥	úy/vý
+（台山音）	猥	úy
 （欽州音）	猥	vui
 （南寧音）	猥	úy
-（廣州音）	碨	úy/vý
+（廣州音）	碨	úy
 （廣州音）	碨	ủy
 （台山音）	碨	ụy/vỵ
 （南寧音）	碨	ủy
 （南寧音）	碨	úy
 （廣州音）	腲	ủy
-（廣州音）	芔	úy/vý
+（廣州音）	芔	úy
 （廣州音）	芔	ủy
 （南寧音）	芔	ủy
 （廣州音）	蒍	ũy/vỹ
@@ -63357,7 +63357,7 @@
 （廣州音）	蔿	ủy
 （南寧音）	蔿	ủy
 （廣州音）	諉	ủy
-（台山音）	諉	ủy/vỷ
+（台山音）	諉	ủy
 （欽州音）	諉	ủy
 （南寧音）	諉	ủy
 （廣州音）	譭	ủy
@@ -63366,95 +63366,95 @@
 （廣州音）	骪	ủy
 （廣州音）	骫	ủy
 （南寧音）	骫	ủy
-（廣州音）	㕀	úy/vý
-（廣州音）	㜇	úy/vý
-（廣州音）	㟪	úy/vý
-（廣州音）	㬩	úy/vý
-（廣州音）	㷉	úy/vý
-（廣州音）	䂕	úy/vý
-（廣州音）	䙆	úy/vý
-（廣州音）	䮹	úy/vý
-（廣州音）	䲁	úy/vý
-（欽州音）	䲁	úy/vý
+（廣州音）	㕀	úy
+（廣州音）	㜇	úy
+（廣州音）	㟪	úy
+（廣州音）	㬩	úy
+（廣州音）	㷉	úy
+（廣州音）	䂕	úy
+（廣州音）	䙆	úy
+（廣州音）	䮹	úy
+（廣州音）	䲁	úy
+（欽州音）	䲁	úy
 （南寧音）	䲁	úy
-（廣州音）	䵳	úy/vý
-（廣州音）	叞	úy/vý
-（廣州音）	嘒	úy/vý
-（廣州音）	嚖	úy/vý
-（廣州音）	墛	úy/vý
-（廣州音）	嬒	úy/vý
-（廣州音）	尉	úy/vý
+（廣州音）	䵳	úy
+（廣州音）	叞	úy
+（廣州音）	嘒	úy
+（廣州音）	嚖	úy
+（廣州音）	墛	úy
+（廣州音）	嬒	úy
+（廣州音）	尉	úy
 （廣州音）	尉	vât
 （廣州音）	尉	vận
 （台山音）	尉	vut
-（台山音）	尉	úy/vý
-（欽州音）	尉	úy/vý
+（台山音）	尉	úy
+（欽州音）	尉	úy
 （南寧音）	尉	úy
 （南寧音）	尉	vât
-（廣州音）	嵔	úy/vý
-（廣州音）	嶎	úy/vý
-（廣州音）	徻	úy/vý
+（廣州音）	嵔	úy
+（廣州音）	嶎	úy
+（廣州音）	徻	úy
 （廣州音）	徻	vúi
-（廣州音）	慧	úy/vý
+（廣州音）	慧	úy
 （廣州音）	慧	ụy/vỵ
 （台山音）	慧	phị
 （欽州音）	慧	vùi
 （南寧音）	慧	(常)úy
 （南寧音）	慧	ụy
-（廣州音）	慰	úy/vý
-（台山音）	慰	úy/vý
-（欽州音）	慰	úy/vý
+（廣州音）	慰	úy
+（台山音）	慰	úy
+（欽州音）	慰	úy
 （南寧音）	慰	úy
-（廣州音）	懀	úy/vý
-（廣州音）	暳	úy/vý
-（廣州音）	泋	úy/vý
-（廣州音）	犚	úy/vý
-（廣州音）	獩	úy/vý
-（廣州音）	畏	úy/vý
-（台山音）	畏	úy/vý
-（欽州音）	畏	úy/vý
+（廣州音）	懀	úy
+（廣州音）	暳	úy
+（廣州音）	泋	úy
+（廣州音）	犚	úy
+（廣州音）	獩	úy
+（廣州音）	畏	úy
+（台山音）	畏	úy
+（欽州音）	畏	úy
 （南寧音）	畏	úy
-（廣州音）	穢	úy/vý
+（廣州音）	穢	úy
 （台山音）	穢	vói
-（台山音）	穢	úy/vý
-（欽州音）	穢	úy/vý
+（台山音）	穢	úy
+（欽州音）	穢	úy
 （南寧音）	穢	úy
-（廣州音）	罻	úy/vý
+（廣州音）	罻	úy
 （廣州音）	罻	vât
-（台山音）	罻	úy/vý
-（廣州音）	翽	úy/vý
+（台山音）	罻	úy
+（廣州音）	翽	úy
 （南寧音）	翽	úy
-（廣州音）	蔚	úy/vý
+（廣州音）	蔚	úy
 （廣州音）	蔚	vât
-（台山音）	蔚	úy/vý
-（欽州音）	蔚	úy/vý
+（台山音）	蔚	úy
+（欽州音）	蔚	úy
 （欽州音）	蔚	vât
 （南寧音）	蔚	úy
 （南寧音）	蔚	vât
-（廣州音）	薉	úy/vý
-（台山音）	薉	úy/vý
-（廣州音）	藯	úy/vý
-（廣州音）	螱	úy/vý
+（廣州音）	薉	úy
+（台山音）	薉	úy
+（廣州音）	藯	úy
+（廣州音）	螱	úy
 （南寧音）	螱	úy
-（廣州音）	褽	úy/vý
-（廣州音）	諱	úy/vý
+（廣州音）	褽	úy
+（廣州音）	諱	úy
 （廣州音）	諱	ũy/vỹ
 （台山音）	諱	phí
-（台山音）	諱	ủy/vỷ
+（台山音）	諱	ủy
 （欽州音）	諱	ùy
 （南寧音）	諱	ụy
-（廣州音）	鐬	úy/vý
-（廣州音）	霨	úy/vý
+（廣州音）	鐬	úy
+（廣州音）	霨	úy
 （南寧音）	霨	úy
-（廣州音）	餵	úy/vý
-（台山音）	餵	úy/vý
-（欽州音）	餵	úy/vý
+（廣州音）	餵	úy
+（台山音）	餵	úy
+（欽州音）	餵	úy
 （南寧音）	餵	úy
-（廣州音）	饖	úy/vý
-（廣州音）	𡜦	úy/vý
-（廣州音）	𣻷	úy/vý
-（廣州音）	𥳀	úy/vý
-（廣州音）	𧬨	úy/vý
+（廣州音）	饖	úy
+（廣州音）	𡜦	úy
+（廣州音）	𣻷	úy
+（廣州音）	𥳀	úy
+（廣州音）	𧬨	úy
 （廣州音）	㗹	ùy
 （廣州音）	䑊	ùy
 （廣州音）	䔺	ùy
@@ -63469,7 +63469,7 @@
 （欽州音）	圍	ùy
 （南寧音）	圍	ùy
 （廣州音）	媁	ùy
-（欽州音）	媁	uy/vy
+（欽州音）	媁	uy
 （南寧音）	媁	uy
 （廣州音）	帷	ùy
 （台山音）	帷	ùy/vỳ
@@ -63541,7 +63541,7 @@
 （南寧音）	闈	ùy
 （廣州音）	韋	ùy
 （廣州音）	韋	ũy/vỹ
-（台山音）	韋	ủy/vỷ
+（台山音）	韋	ủy
 （欽州音）	韋	ùy
 （南寧音）	韋	ùy
 （廣州音）	鮠	ùy
@@ -63558,7 +63558,7 @@
 （廣州音）	䪘	ũy/vỹ
 （廣州音）	䵋	ũy/vỹ
 （廣州音）	偉	ũy/vỹ
-（台山音）	偉	ủy/vỷ
+（台山音）	偉	ủy
 （欽州音）	偉	ủy
 （南寧音）	偉	ủy
 （廣州音）	儰	ũy/vỹ
@@ -63570,29 +63570,29 @@
 （廣州音）	濻	ũy/vỹ
 （廣州音）	瀢	ũy/vỹ
 （廣州音）	煒	ũy/vỹ
-（台山音）	煒	ủy/vỷ
+（台山音）	煒	ủy
 （欽州音）	煒	ủy
 （南寧音）	煒	ủy
 （廣州音）	瑋	ũy/vỹ
-（台山音）	瑋	ủy/vỷ
+（台山音）	瑋	ủy
 （欽州音）	瑋	ủy
 （南寧音）	瑋	ủy
 （廣州音）	緯	ũy/vỹ
 （廣州音）	緯	ụy/vỵ
-（台山音）	緯	ủy/vỷ
+（台山音）	緯	ủy
 （欽州音）	緯	ủy
 （南寧音）	緯	ủy
 （廣州音）	葦	ũy/vỹ
-（台山音）	葦	ủy/vỷ
+（台山音）	葦	ủy
 （欽州音）	葦	ủy
 （南寧音）	葦	ùy
 （廣州音）	韑	ũy/vỹ
 （廣州音）	韙	ũy/vỹ
-（台山音）	韙	ủy/vỷ
+（台山音）	韙	ủy
 （欽州音）	韙	ủy
 （南寧音）	韙	ủy
 （廣州音）	韡	ũy/vỹ
-（台山音）	韡	ủy/vỷ
+（台山音）	韡	ủy
 （南寧音）	韡	ủy
 （廣州音）	颹	ũy/vỹ
 （廣州音）	𥯤	ũy/vỹ
@@ -64768,7 +64768,7 @@
 （廣州音）	㙗	vui
 （廣州音）	䋿	vui
 （廣州音）	偎	vui
-（台山音）	偎	úy/vý
+（台山音）	偎	úy
 （欽州音）	偎	vui
 （南寧音）	偎	(又)úy
 （南寧音）	偎	vôi
@@ -64780,13 +64780,13 @@
 （南寧音）	渨	vôi
 （廣州音）	煨	vui
 （台山音）	煨	vói
-（台山音）	煨	úy/vý
+（台山音）	煨	úy
 （欽州音）	煨	vui
 （南寧音）	煨	vôi
 （廣州音）	燰	vui
 （廣州音）	葨	vui
 （廣州音）	隈	vui
-（台山音）	隈	úy/vý
+（台山音）	隈	úy
 （欽州音）	隈	vui
 （南寧音）	隈	vôi
 （廣州音）	㛱	vủi
@@ -71096,7 +71096,7 @@
 （台山音）	𣛒	lại
 （台山音）	𣤵	yỉnh
 （南寧音）	𣛒	lạy/lệ
-（台山音）	𣨙	ủy/vỷ
+（台山音）	𣨙	ủy
 （台山音）	𣩟	ánh
 （台山音）	𣯨	túng
 （台山音）	𣰽	khùi
@@ -71111,7 +71111,7 @@
 （台山音）	𤁽	yình
 （台山音）	𤃀	lại
 （台山音）	𤇶	chính
-（台山音）	𤈫	úy/vý
+（台山音）	𤈫	úy
 （台山音）	𤉡	slũ
 （台山音）	𤏾	chính
 （台山音）	𤑄	ngịch
