--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -1,9 +1,9 @@
 #粵語國語字總合書寫建議體，集合粵語廣州音欽州音台山音南寧音同通用粵語音
 #大粵國音實錄 Đại Oạt Quóc Yâm Sật Lục
-#使用指南：一個讀音可以同時存在多種正寫方式，譬如話uy 同 uy,呢兩種正寫喺手寫情況底下同粵語國語字發音系統入面並無分別。
+#使用指南：一個讀音可以同時存在有多種唔同嘅正寫方式，唔同嘅正寫方法用斜槓"/"符號隔開
 #ay同ê正寫嘅韻腹發音相同，呢兩種正寫嘅分別在於，漢字嘅詞源係漢越詞或者有明確音變規律嘅純越詞語用ê，其餘嘅非漢字詞、唔符合一般音韻變化規律嘅發音，同埋用嚟表音嘅表示韻腹發音而冇漢字意思嘅音節依然使用ay正寫
 #韻首字母k喺韻腹字母a u o â ă ư ô ơ前邊可以用字母c替代
-#version: 3/6/2025
+#version: 8/6/2025
 #author: cathaylab
 （廣州音）	邊	binh
 （廣州音）	邊	biên
@@ -7377,7 +7377,7 @@
 （廣州音）	蝤	châu
 （廣州音）	蝤	xầu
 （廣州音）	蝤	yầu
-（台山音）	蝤	yừu
+（台山音）	蝤	ừu
 （南寧音）	蝤	xầu
 （南寧音）	蝤	yầu
 （南寧音）	蝤	châu
@@ -7402,13 +7402,13 @@
 （通用版）	遒	xừu
 （廣州音）	遒	xầu
 （廣州音）	遒	yầu
-（台山音）	遒	yừu
+（台山音）	遒	ừu
 （欽州音）	遒	xầu
 （南寧音）	遒	xầu
 （通用版）	酋	xừu
 （廣州音）	酋	xầu
 （廣州音）	酋	yầu
-（台山音）	酋	yừu
+（台山音）	酋	ừu
 （欽州音）	酋	xầu
 （南寧音）	酋	xầu
 （通用版）	酧	xừu
@@ -13656,7 +13656,7 @@
 （廣州音）	疐	chí
 （廣州音）	疐	đáy/đế
 （台山音）	疐	chí
-（台山音）	疐	ỹ
+（台山音）	疐	ỹ/ỡi
 （南寧音）	疐	chí
 （廣州音）	碲	đáy/đế
 （台山音）	碲	ái
@@ -13678,7 +13678,7 @@
 （廣州音）	蒂	tháy/thế
 （廣州音）	蒂	đáy/đế
 （廣州音）	蒂	đính
-（台山音）	蒂	ỹ
+（台山音）	蒂	ỹ/ỡi
 （欽州音）	蒂	đáy/đế
 （南寧音）	蒂	đáy/đế
 （廣州音）	蝃	choát
@@ -14299,7 +14299,7 @@
 （廣州音）	地	đệnh
 （廣州音）	地	đỵ
 （台山音）	地	tỵ
-（台山音）	地	ỵ
+（台山音）	地	ỵ/ợi
 （欽州音）	地	đì
 （南寧音）	地	đị
 （廣州音）	坔	đỵ
@@ -29751,7 +29751,7 @@
 （台山音）	去	húi
 （欽州音）	去	hí
 （南寧音）	去	hứ
-（通用版）	咻	yưu
+（通用版）	咻	hưu
 （廣州音）	咻	hủi
 （廣州音）	咻	yâu
 （台山音）	咻	hứu
@@ -31936,10 +31936,10 @@
 （廣州音）	𡀞	chiêp
 （廣州音）	𡀞	yáp
 （廣州音）	𣚕	yáp
-（通用版）	呦	yưu
+（通用版）	呦	ưu
 （廣州音）	呦	yao
 （廣州音）	呦	yâu
-（台山音）	呦	yứu
+（台山音）	呦	ứu
 （欽州音）	呦	yao
 （欽州音）	呦	yâu
 （南寧音）	呦	yâu
@@ -32944,16 +32944,16 @@
 （廣州音）	䮌	yâu
 （廣州音）	䰍	yâu
 （廣州音）	䱂	yâu
-（通用版）	丘	yưu
+（通用版）	丘	hưu
 （廣州音）	丘	yâu
 （台山音）	丘	hứu
 （欽州音）	丘	hâu
 （南寧音）	丘	yâu
 （廣州音）	优	yâu
 （南寧音）	优	yâu
-（通用版）	優	yưu
+（通用版）	優	ưu
 （廣州音）	優	yâu
-（台山音）	優	yứu
+（台山音）	優	ứu
 （欽州音）	優	yâu
 （南寧音）	優	yâu
 （廣州音）	凪	yâu
@@ -32964,21 +32964,21 @@
 （廣州音）	嚘	yâu
 （南寧音）	嚘	yâu
 （廣州音）	坵	yâu
-（通用版）	幽	yưu
+（通用版）	幽	ưu
 （廣州音）	幽	yâu
-（台山音）	幽	yứu
+（台山音）	幽	ứu
 （欽州音）	幽	yâu
 （南寧音）	幽	yâu
-（通用版）	庥	yưu
+（通用版）	庥	hưu
 （廣州音）	庥	yâu
 （台山音）	庥	hứu
 （欽州音）	庥	yâu
 （南寧音）	庥	yâu
 （廣州音）	怮	yâu
 （廣州音）	恷	yâu
-（通用版）	憂	yưu
+（通用版）	憂	ưu
 （廣州音）	憂	yâu
-（台山音）	憂	yứu
+（台山音）	憂	ứu
 （欽州音）	憂	nhâu
 （欽州音）	憂	yâu
 （南寧音）	憂	yâu
@@ -32997,47 +32997,47 @@
 （南寧音）	燠	ứ
 （南寧音）	燠	ố
 （廣州音）	纋	yâu
-（通用版）	耰	yưu
+（通用版）	耰	ưu
 （廣州音）	耰	yâu
-（台山音）	耰	yứu
+（台山音）	耰	ứu
 （南寧音）	耰	yâu
 （廣州音）	脙	yâu
 （廣州音）	蓲	yâu
-（通用版）	蚯	yưu
+（通用版）	蚯	hưu
 （廣州音）	蚯	yâu
 （台山音）	蚯	hứu
 （欽州音）	蚯	hâu
 （南寧音）	蚯	yâu
-（通用版）	貅	yưu
+（通用版）	貅	hưu
 （廣州音）	貅	yâu
 （台山音）	貅	hứu
 （欽州音）	貅	hâu
 （欽州音）	貅	yâu
 （南寧音）	貅	yâu
-（通用版）	邱	yưu
+（通用版）	邱	hưu
 （廣州音）	邱	yâu
 （台山音）	邱	hứu
 （欽州音）	邱	hâu
 （南寧音）	邱	yâu
 （廣州音）	鄾	yâu
 （廣州音）	銝	yâu
-（通用版）	髤	yưu
+（通用版）	髤	hưu
 （廣州音）	髤	yâu
 （台山音）	髤	hứu
-（通用版）	髹	yưu
+（通用版）	髹	hưu
 （廣州音）	髹	yâu
 （台山音）	髹	hứu
 （欽州音）	髹	hâu
 （南寧音）	髹	yâu
 （廣州音）	鮴	yâu
-（通用版）	鵂	yưu
+（通用版）	鵂	hưu
 （廣州音）	鵂	yâu
 （台山音）	鵂	hứu
 （欽州音）	鵂	hâu
 （南寧音）	鵂	yâu
-（通用版）	麀	yưu
+（通用版）	麀	ưu
 （廣州音）	麀	yâu
-（台山音）	麀	yứu
+（台山音）	麀	ứu
 （欽州音）	麀	yâu
 （南寧音）	麀	yâu
 （廣州音）	𠇲	yâu
@@ -33050,10 +33050,10 @@
 （廣州音）	㱙	nẩu
 （廣州音）	㱙	yẩu
 （廣州音）	㶭	yẩu
-（通用版）	友	yửu
+（通用版）	友	ữu
 （廣州音）	友	yẩu
 （廣州音）	友	yẫu
-（台山音）	友	yữu
+（台山音）	友	ữu
 （欽州音）	友	yẩu
 （南寧音）	友	(白)yẩu
 （南寧音）	友	yẫu
@@ -33065,24 +33065,24 @@
 （欽州音）	朽	nẩu
 （南寧音）	朽	nẩu
 （通用版）	柚	tục
-（通用版）	柚	yừu
+（通用版）	柚	ừu
 （廣州音）	柚	chục
 （廣州音）	柚	yầu
 （廣州音）	柚	yẩu
 （廣州音）	柚	yậu
 （台山音）	柚	tục
-（台山音）	柚	yừu
-（台山音）	柚	yữu
+（台山音）	柚	ừu
+（台山音）	柚	ữu
 （欽州音）	柚	yầu
 （南寧音）	柚	(白)yẩu
 （南寧音）	柚	(文)yậu
 （廣州音）	楺	yầu
 （廣州音）	楺	yẩu
-（通用版）	櫾	yừu
+（通用版）	櫾	ừu
 （廣州音）	櫾	yầu
 （廣州音）	櫾	yẩu
 （廣州音）	櫾	yậu
-（台山音）	櫾	yữu
+（台山音）	櫾	ữu
 （廣州音）	泑	yấu
 （廣州音）	泑	yẩu
 （廣州音）	煣	yẩu
@@ -33097,56 +33097,57 @@
 （欽州音）	糅	nầu
 （南寧音）	糅	yầu
 （廣州音）	聈	yẩu
-（通用版）	蚴	yứu
+（通用版）	蚴	ứu
 （廣州音）	蚴	yấu
 （廣州音）	蚴	yẩu
-（台山音）	蚴	yứu
+（台山音）	蚴	ứu
 （南寧音）	蚴	yẩu
 （南寧音）	蚴	yấu
-（通用版）	釉	yửu
+（通用版）	釉	ựu
 （廣州音）	釉	yẩu
 （廣州音）	釉	yậu
-（台山音）	釉	yừu
-（台山音）	釉	yựu
+（台山音）	釉	ừu
+（台山音）	釉	ựu
 （欽州音）	釉	yầu
 （南寧音）	釉	(白)yẩu
 （南寧音）	釉	yậu
-（通用版）	鈾	yừu
+（通用版）	鈾	ừu
 （廣州音）	鈾	yầu
 （廣州音）	鈾	yẩu
-（台山音）	鈾	yừu
+（台山音）	鈾	ừu
 （欽州音）	鈾	yầu
 （南寧音）	鈾	(白)yẩu
 （南寧音）	鈾	yầu
-（通用版）	黝	yửu
+（通用版）	黝	ửu
 （廣州音）	黝	yẩu
 （台山音）	黝	yểu
-（台山音）	黝	yửu
+（台山音）	黝	ửu
 （欽州音）	黝	yầu
 （南寧音）	黝	yẩu
-（通用版）	鼬	yửu
+（通用版）	鼬	ữu
+（通用版）	鼬	ựu
 （廣州音）	鼬	yẩu
 （廣州音）	鼬	yậu
-（台山音）	鼬	yữu
+（台山音）	鼬	ữu
 （欽州音）	鼬	yầu
 （南寧音）	鼬	yậu
 （廣州音）	㓜	yấu
 （廣州音）	䟬	yấu
 （廣州音）	䠗	yấu
 （廣州音）	孧	yấu
-（通用版）	幼	yứu
+（通用版）	幼	ứu
 （廣州音）	幼	yấu
-（台山音）	幼	yứu
+（台山音）	幼	ứu
 （欽州音）	幼	yấu
 （南寧音）	幼	yấu
 （廣州音）	糿	yấu
 （廣州音）	㐕	yầu
 （廣州音）	㒡	yầu
 （廣州音）	㕱	yầu
-（通用版）	㘥	yừu
+（通用版）	㘥	ừu
 （廣州音）	㘥	ngò
 （廣州音）	㘥	yầu
-（台山音）	㘥	yừu
+（台山音）	㘥	ừu
 （廣州音）	㚭	yầu
 （廣州音）	㛜	yầu
 （廣州音）	㫍	yầu
@@ -33178,9 +33179,9 @@
 （南寧音）	囮	(又)yầu
 （南寧音）	囮	ngò
 （廣州音）	媃	yầu
-（通用版）	尤	yừu
+（通用版）	尤	ừu
 （廣州音）	尤	yầu
-（台山音）	尤	yừu
+（台山音）	尤	ừu
 （欽州音）	尤	yầu
 （南寧音）	尤	yầu
 （廣州音）	峳	yầu
@@ -33189,9 +33190,9 @@
 （廣州音）	怞	chậu
 （廣州音）	怞	yầu
 （廣州音）	怣	yầu
-（通用版）	悠	yừu
+（通用版）	悠	ừu
 （廣州音）	悠	yầu
-（台山音）	悠	yừu
+（台山音）	悠	ừu
 （欽州音）	悠	yâu
 （欽州音）	悠	yầu
 （南寧音）	悠	(又)yâu
@@ -33217,9 +33218,9 @@
 （廣州音）	擩	yữ
 （台山音）	擩	yì
 （南寧音）	擩	yữ
-（通用版）	攸	yừu
+（通用版）	攸	ừu
 （廣州音）	攸	yầu
-（台山音）	攸	yừu
+（台山音）	攸	ừu
 （欽州音）	攸	yầu
 （南寧音）	攸	yầu
 （廣州音）	斿	lầu
@@ -33233,38 +33234,38 @@
 （廣州音）	楢	yầu
 （欽州音）	楢	yầu
 （廣州音）	沋	yầu
-（通用版）	油	yừu
+（通用版）	油	ừu
 （廣州音）	油	yầu
-（台山音）	油	yừu
+（台山音）	油	ừu
 （欽州音）	油	yầu
 （南寧音）	油	yầu
 （廣州音）	渘	yầu
-（通用版）	游	yừu
+（通用版）	游	ừu
 （廣州音）	游	yầu
 （廣州音）	游	yậu
-（台山音）	游	yừu
+（台山音）	游	ừu
 （欽州音）	游	yầu
 （南寧音）	游	yầu
-（通用版）	猶	yừu
+（通用版）	猶	ừu
 （廣州音）	猶	yầu
-（台山音）	猶	yừu
+（台山音）	猶	ừu
 （欽州音）	猶	yầu
 （南寧音）	猶	yầu
-（通用版）	猷	yừu
+（通用版）	猷	ừu
 （廣州音）	猷	yầu
-（台山音）	猷	yừu
+（台山音）	猷	ừu
 （欽州音）	猷	yầu
 （南寧音）	猷	yầu
 （廣州音）	瑈	yầu
 （廣州音）	瓇	yầu
-（通用版）	由	yừu
+（通用版）	由	ừu
 （廣州音）	由	yầu
-（台山音）	由	yừu
+（台山音）	由	ừu
 （欽州音）	由	yầu
 （南寧音）	由	yầu
-（通用版）	疣	yừu
+（通用版）	疣	ừu
 （廣州音）	疣	yầu
-（台山音）	疣	yừu
+（台山音）	疣	ừu
 （欽州音）	疣	yầu
 （南寧音）	疣	yầu
 （廣州音）	禸	nẫu
@@ -33279,7 +33280,7 @@
 （廣州音）	繇	yều
 （台山音）	繇	chạo
 （台山音）	繇	yều
-（台山音）	繇	yừu
+（台山音）	繇	ừu
 （欽州音）	繇	chầu
 （欽州音）	繇	yều
 （欽州音）	繇	yầu
@@ -33288,9 +33289,9 @@
 （南寧音）	繇	chậu
 （廣州音）	肬	yầu
 （廣州音）	脜	yầu
-（通用版）	莜	yừu
+（通用版）	莜	ừu
 （廣州音）	莜	yầu
-（台山音）	莜	yừu
+（台山音）	莜	ừu
 （欽州音）	莜	thiều
 （欽州音）	莜	yầu
 （南寧音）	莜	điệu
@@ -33298,27 +33299,27 @@
 （廣州音）	莤	suc
 （廣州音）	莤	yầu
 （廣州音）	葇	yầu
-（通用版）	蕕	yừu
+（通用版）	蕕	ừu
 （廣州音）	蕕	yầu
-（台山音）	蕕	yừu
+（台山音）	蕕	ừu
 （南寧音）	蕕	yầu
-（通用版）	蚰	yừu
+（通用版）	蚰	ừu
 （廣州音）	蚰	yầu
-（台山音）	蚰	yừu
+（台山音）	蚰	ừu
 （欽州音）	蚰	yầu
 （南寧音）	蚰	yầu
 （廣州音）	蝚	nồ
 （廣州音）	蝚	yầu
-（通用版）	蝣	yừu
+（通用版）	蝣	ừu
 （廣州音）	蝣	yầu
 （廣州音）	蝣	yậu
-（台山音）	蝣	yừu
+（台山音）	蝣	ừu
 （欽州音）	蝣	yầu
 （南寧音）	蝣	yầu
 （廣州音）	訧	yầu
 （通用版）	蹂	ngầu
 （通用版）	蹂	ngẫu
-（通用版）	蹂	yừu
+（通用版）	蹂	ừu
 （廣州音）	蹂	yầu
 （廣州音）	蹂	yẫu
 （台山音）	蹂	ngiều
@@ -33326,23 +33327,23 @@
 （欽州音）	蹂	yầu
 （南寧音）	蹂	yầu
 （廣州音）	輏	yầu
-（通用版）	輶	yừu
+（通用版）	輶	ừu
 （廣州音）	輶	yầu
 （廣州音）	輶	yẫu
-（台山音）	輶	yừu
+（台山音）	輶	ừu
 （南寧音）	輶	yầu
 （廣州音）	逌	yầu
 （廣州音）	逰	yầu
-（通用版）	遊	yừu
+（通用版）	遊	ừu
 （廣州音）	遊	yầu
 （廣州音）	遊	yậu
-（台山音）	遊	yừu
+（台山音）	遊	ừu
 （欽州音）	遊	yầu
 （南寧音）	遊	yầu
 （廣州音）	邎	yầu
-（通用版）	郵	yừu
+（通用版）	郵	ừu
 （廣州音）	郵	yầu
-（台山音）	郵	yừu
+（台山音）	郵	ừu
 （欽州音）	郵	yầu
 （南寧音）	郵	yầu
 （廣州音）	醔	yầu
@@ -33355,9 +33356,9 @@
 （欽州音）	鞣	yầu
 （南寧音）	鞣	yầu
 （廣州音）	騥	yầu
-（通用版）	魷	yừu
+（通用版）	魷	ừu
 （廣州音）	魷	yầu
-（台山音）	魷	yừu
+（台山音）	魷	ừu
 （欽州音）	魷	yầu
 （南寧音）	魷	yầu
 （廣州音）	鮋	yầu
@@ -33393,26 +33394,26 @@
 （廣州音）	䂋	yẫu
 （廣州音）	䅎	yẫu
 （廣州音）	䒴	yẫu
-（通用版）	䛻	yữu
+（通用版）	䛻	ữu
 （廣州音）	䛻	yẫu
-（台山音）	䛻	yựu
+（台山音）	䛻	ựu
 （廣州音）	䣭	yẫu
 （廣州音）	䬀	yẫu
 （廣州音）	䳑	yẫu
-（通用版）	丣	yữu
+（通用版）	丣	ữu
 （廣州音）	丣	yẫu
-（台山音）	丣	yữu
-（通用版）	卣	yữu
+（台山音）	丣	ữu
+（通用版）	卣	ữu
 （廣州音）	卣	yẫu
-（台山音）	卣	yữu
+（台山音）	卣	ữu
 （南寧音）	卣	yẫu
 （廣州音）	唀	yẫu
-（通用版）	有	yữu
+（通用版）	有	ữu
 （廣州音）	有	yẫu
 （廣州音）	有	yậu
-（台山音）	有	yứu
-（台山音）	有	yữu
-（台山音）	有	yựu
+（台山音）	有	ứu
+（台山音）	有	ữu
+（台山音）	有	ựu
 （欽州音）	有	yẩu
 （南寧音）	有	yẫu
 （廣州音）	栯	yuc
@@ -33421,9 +33422,9 @@
 （廣州音）	槱	yẫu
 （南寧音）	槱	yẫu
 （廣州音）	湵	yẫu
-（通用版）	牖	yữu
+（通用版）	牖	ữu
 （廣州音）	牖	yẫu
-（台山音）	牖	yựu
+（台山音）	牖	ựu
 （欽州音）	牖	yẩu
 （南寧音）	牖	yẫu
 （廣州音）	牗	yẫu
@@ -33436,31 +33437,31 @@
 （南寧音）	粈	(白)neo
 （南寧音）	粈	(白)niêu
 （廣州音）	羐	yẫu
-（通用版）	羑	yữu
+（通用版）	羑	ữu
 （廣州音）	羑	yẫu
-（台山音）	羑	yừu
+（台山音）	羑	ừu
 （欽州音）	羑	yẩu
 （南寧音）	羑	yẫu
 （廣州音）	苃	yẫu
-（通用版）	莠	yữu
+（通用版）	莠	ữu
 （廣州音）	莠	yẫu
-（台山音）	莠	yựu
+（台山音）	莠	ựu
 （欽州音）	莠	yẩu
 （南寧音）	莠	yẫu
 （廣州音）	蜏	yẫu
-（通用版）	誘	yữu
+（通用版）	誘	ữu
 （廣州音）	誘	yẫu
-（台山音）	誘	yựu
+（台山音）	誘	ựu
 （欽州音）	誘	yấu
 （南寧音）	誘	yấu
-（通用版）	酉	yữu
+（通用版）	酉	ữu
 （廣州音）	酉	yẫu
-（台山音）	酉	yữu
+（台山音）	酉	ữu
 （欽州音）	酉	yẩu
 （南寧音）	酉	yẫu
-（通用版）	銪	yữu
+（通用版）	銪	ữu
 （廣州音）	銪	yẫu
-（台山音）	銪	yữu
+（台山音）	銪	ữu
 （欽州音）	銪	yẩu
 （南寧音）	銪	yẫu
 （廣州音）	韖	yẫu
@@ -33476,47 +33477,47 @@
 （廣州音）	䆜	yậu
 （廣州音）	䞥	yậu
 （廣州音）	亴	yậu
-（通用版）	佑	yựu
+（通用版）	佑	ựu
 （廣州音）	佑	yậu
-（台山音）	佑	yựu
+（台山音）	佑	ựu
 （欽州音）	佑	yầu
 （南寧音）	佑	yậu
 （廣州音）	佦	yậu
-（通用版）	侑	yựu
+（通用版）	侑	ựu
 （廣州音）	侑	yậu
-（台山音）	侑	yựu
+（台山音）	侑	ựu
 （欽州音）	侑	yầu
 （南寧音）	侑	yậu
-（通用版）	又	yựu
+（通用版）	又	ựu
 （廣州音）	又	yậu
-（台山音）	又	yựu
+（台山音）	又	ựu
 （欽州音）	又	yầu
 （南寧音）	又	yậu
-（通用版）	右	yựu
+（通用版）	右	ựu
 （廣州音）	右	yậu
-（台山音）	右	yựu
+（台山音）	右	ựu
 （欽州音）	右	yầu
 （南寧音）	右	yậu
-（通用版）	囿	yựu
+（通用版）	囿	ựu
 （廣州音）	囿	yậu
-（台山音）	囿	yựu
+（台山音）	囿	ựu
 （欽州音）	囿	yầu
 （南寧音）	囿	yậu
 （廣州音）	姷	yậu
-（通用版）	宥	yựu
+（通用版）	宥	ựu
 （廣州音）	宥	yậu
-（台山音）	宥	yựu
+（台山音）	宥	ựu
 （欽州音）	宥	yầu
 （南寧音）	宥	yậu
 （廣州音）	峟	yậu
-（通用版）	狖	yựu
+（通用版）	狖	ựu
 （廣州音）	狖	yậu
-（台山音）	狖	yừu
+（台山音）	狖	ừu
 （欽州音）	狖	yầu
 （南寧音）	狖	yậu
-（通用版）	祐	yựu
+（通用版）	祐	ựu
 （廣州音）	祐	yậu
-（台山音）	祐	yựu
+（台山音）	祐	ựu
 （欽州音）	祐	yầu
 （南寧音）	祐	yậu
 （廣州音）	褎	chậu
@@ -36523,7 +36524,7 @@
 （南寧音）	猺	yều
 （廣州音）	珧	yều
 （台山音）	珧	yều
-（台山音）	珧	yừu
+（台山音）	珧	ừu
 （欽州音）	珧	yều
 （南寧音）	珧	yều
 （廣州音）	瑤	yều
@@ -39799,7 +39800,7 @@
 （廣州音）	浗	khầu
 （通用版）	犰	khừu
 （廣州音）	犰	khầu
-（台山音）	犰	yừu
+（台山音）	犰	ừu
 （欽州音）	犰	khầu
 （南寧音）	犰	khầu
 （廣州音）	玌	khầu
@@ -64377,7 +64378,7 @@
 （廣州音）	䶭	vong
 （廣州音）	尢	vong
 （台山音）	尢	vỏng
-（台山音）	尢	yừu
+（台山音）	尢	ừu
 （欽州音）	尢	vong
 （欽州音）	尢	yầu
 （南寧音）	尢	yầu
@@ -67917,7 +67918,7 @@
 （廣州音）	知	chi
 （廣州音）	知	chí
 （台山音）	知	chí
-（台山音）	知	ý
+（台山音）	知	ý/ới
 （欽州音）	知	chi
 （南寧音）	知	chi
 （南寧音）	知	chí
